# session-state-explorer-reaper

./: .gitignore  README.md  pyproject.toml
data/examples/: example_project.rpp  make_example_data.py
docs/: demo_script.md  research_context.md
src/session_state_explorer/: __init__.py  app.py  audio_descriptors.py  export.py  graph_builder.py  mixer.py  models.py  reaper_fx_knowledge.py  recommendations.py  rpp_parser.py  utils.py  visualization.py
src/session_state_explorer/canonical_export/: __init__.py  cli.py  exporter.py  manifest.py  mapper.py  native_models.py
tests/: test_canonical_roundtrip.py  test_example_data.py  test_export_bundle.py  test_graph_builder.py  test_hardening.py  test_mixer.py  test_reaper_fx_knowledge.py  test_recommendations.py  test_rpp_parser.py  test_utils.py
tests/fixtures/: folder_sends_project.rpp
