[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "session-state-explorer"
version = "0.3.0"
description = "Interpretable DAW-state graphs for human-centered AI-assisted music production (research prototype)."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "Session State Explorer contributors" }]
keywords = [
    "daw",
    "reaper",
    "music-production",
    "graph",
    "interpretability",
    "audio-descriptors",
    "music-technology",
]

# Core dependencies. The audio and visualization layers degrade gracefully when
# their optional libraries are missing, so the minimal install still parses a
# project and builds a graph.
dependencies = [
    "streamlit>=1.30",
    "networkx>=3.1",
    "pandas>=2.0",
    "numpy>=1.24",
    "pydantic>=2.5",
    "plotly>=5.18",
]

[project.optional-dependencies]
audio = ["librosa>=0.10", "soundfile>=0.12", "pyloudnorm>=0.1.1"]
viz = ["pyvis>=0.3.2"]
test = ["pytest>=7.4"]
# Convenience: everything needed for the full Streamlit experience.
full = [
    "librosa>=0.10",
    "soundfile>=0.12",
    "pyloudnorm>=0.1.1",
    "pyvis>=0.3.2",
]

[project.urls]
Homepage = "https://github.com/ColonelKernel/session-state-explorer"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
